--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,10 +20,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install hamplots
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install hamplots --upgrade 
           
       - name: start_rx
-        run: python3 listener-15m.py
+        run: python3 ./listener-15m.py
