--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          
+      - name: Install paho
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install paho-mqtt
+
       - name: start_rx
         run: python3 listener-15m.py
