--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Test
 
 on:
-#  schedule:
-#      - cron: '0,30 * * * *'
+   schedule:
+     - cron: '0,30 * * * *'
       
   workflow_dispatch:    
 #  workflow_call:
