--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 
 on:
    schedule:
-     - cron: '0,30 * * * *'
+     - cron: '*/5 * * * *'
       
   workflow_dispatch:    
 #  workflow_call:
