--- a/.github/workflows/run-listener-tx.yml
+++ b/.github/workflows/run-listener-tx.yml
@@ -1,8 +1,8 @@
 name: run-listener-tx
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'
+#  schedule:
+#    - cron: '*/5 * * * *'
       
   workflow_dispatch:    
   workflow_call:
