--- a/.github/workflows/do_plots.yml
+++ b/.github/workflows/do_plots.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:    
   workflow_call:
   workflow_run:
-      workflows: ['run-listener-tx']
+      workflows: ['run-listener']
       types: [completed]
    
 jobs:
