--- a/.github/workflows/run-listener.yml
+++ b/.github/workflows/run-listener.yml
@@ -7,6 +7,9 @@ on:
       
   workflow_dispatch:    
   workflow_call:
+  workflow_run:
+    workflows: ['run-listener']
+    types: [completed]
     
 jobs:
   collect:
