--- a/.github/workflows/run-listener.yml
+++ b/.github/workflows/run-listener.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:    
   workflow_call:
   workflow_run:
-    workflows: ['run-listener']
+    workflows: ['do_plots']
     types: [completed]
     
 jobs:
